Fix table spacing inconsistency

--- a/include/sass/text.sass
+++ b/include/sass/text.sass
@@ -156,7 +156,7 @@ kbd
 
 // Tables
 table
-    border-spacing: 0 math.div($spacing-0, 2)
+    border-spacing: 0 1px
 
     // Rounding
     overflow: hidden
